# duckdb

./: CMakeLists.txt
examples/embedded-c++/: CMakeLists.txt  Microbench.ipynb  config  example.cpp  job.cpp  job_script.cpp  join_data_gen.py  main.cpp  microbench.cpp  microbench_auto.cpp  microbench_build.cpp  microbench_build_multi_col.cpp  microbench_build_new.cpp  microbench_build_real.cpp  model_lm.ipynb  orders_config  run.sh  ssb_script.cpp  tpch_script.cpp
examples/embedded-c++/case_setup/: case1.sql  case1_schema.json  case2.sql  case2_schema.json
examples/embedded-c++/config/: pipeline1  pipeline2  query
examples/embedded-c++/example_config/: pipeline1
examples/embedded-c++/job_setup/: add_columnid.py  csv_to_parquet.py  rewrite_query.py
examples/embedded-c++/query/: job1a.sql  job3a.sql  job4a.sql  job5a.sql  job5c.sql  job6a.sql  job6b.sql  job_schema.json  job_schema_gen.py  pipeline1.json  pipeline2.json  pipeline3.json  q10.sql  q3.sql  tmp.sql  tpch_schema.json  tpch_schema_gen.py
examples/parallel-build/: CMakeLists.txt  Makefile  join_data_gen.py  main.cpp  plot.py  run.cpp
src/execution/: expression_executor.cpp  join_hashtable.cpp  physical_operator.cpp  physical_plan_generator.cpp
src/main/: materialized_query_result.cpp  query_result.cpp  stream_query_result.cpp
src/optimizer/: CMakeLists.txt  materialize_planner.cpp  optimizer.cpp
src/parallel/: event.cpp  executor.cpp  meta_pipeline.cpp  pipeline.cpp  pipeline_executor.cpp  task_scheduler.cpp
src/planner/: table_filter.cpp
src/storage/: data_table.cpp
(+87 files in other folders)
